# terok

./: .dockerignore  .gitignore  .importlinter  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  REUSE.toml  mkdocs.yml  properdocs.yml  pyproject.toml  sonar-project.properties  tach.toml  vulture_whitelist.py
.github/: requirements-ci.txt
.github/workflows/: analysis.yml  ci.yml  docs.yml  integration.yml  no-git-deps.yml  release.yml  sonar_pr.yml
completions/: terok
docs/: CONTAINER_LIFECYCLE.md  DEVELOPER.md  SHARED_DIRS.md  USAGE.md  agent-compat-matrix.md  apparmor.md  ci_map.py  concepts.md  container-layers.md  container-lifecycle.md  developer.md  docker.md  gen_ci_map.py  gen_config_reference.py  gen_quality_report.py  gen_ref_pages.py  gen_test_map.py  git-gate-and-security-modes.md  index.md  login-design.md  packaging.md  selinux.md  shared-dirs.md  shield-security.md  usage.md
docs/brainstorming/: per-task-context-isolation.md  todo-agent-helpers.md
docs/img/: architecture.d2
docs/stylesheets/: extra.css
examples/: terok-config.yml
examples/hooks/: task-notify.sh  toad-port-forward.sh
examples/projects/alpaka3/: project.yml
examples/projects/cp2k/: project.yml
examples/projects/teams/: infra-dev-team.yml
examples/projects/uc/: project.yml  user.dockerinclude
examples/uc/: project.yml
src/luskctl/tui/: screens.py  task_actions.py
src/terok/: __init__.py
src/terok/clearance/: __init__.py  _install.py  identity.py
src/terok/cli/: __init__.py  __main__.py  acp_proxy.py  main.py  wiring.py
src/terok/gate/: __main__.py  server.py
src/terok/lib/: __init__.py  facade.py  project.py  task.py
src/terok/tools/: hardening.py
src/terok/tui/: __init__.py  __main__.py  app.py  askpass_protocol.py  askpass_service.py  clearance_screen.py  clipboard.py  log_viewer.py  polling.py  project_actions.py  screens.py  serve.py  setup_screen.py  shell_launch.py  task_actions.py  wizard_screens.py  worker_log_screen.py
src/terok/ui_utils/: terminal.py
tests/: conftest.py  constants.py  test_utils.py  testfs.py  testgate.py  testgit.py  testnet.py
tests/cli/: test_cli_autopilot.py  test_cli_completions.py  test_cli_config.py  test_cli_gate_server.py  test_cli_image.py  test_cli_module.py  test_cli_shield.py  test_cli_sickbay.py  test_cli_wizard.py  test_cli_workflows.py
tests/containers/: Containerfile.podman  run-matrix.sh
tests/gate/: test_server.py
tests/integration/: __init__.py  conftest.py  helpers.py  test_bypass_connectivity.py  test_container_e2e.py  test_shield_hooks.py  test_shield_no_podman.py  test_shield_podman.py  test_shield_restart.py
tests/integration/cli/: README.md  __init__.py  test_help.py
tests/integration/containers/: __init__.py  conftest.py  test_git_identity_container.py
tests/integration/credential_proxy/: test_env_story.py  test_proxy_env_integration.py  test_proxy_stories.py  test_ssh_agent_stories.py
tests/integration/gate/: README.md  test_sync.py
tests/integration/launch/: README.md  test_task_start.py
tests/integration/projects/: README.md  __init__.py  test_projects.py
tests/integration/setup/: README.md  test_ssh_init.py
tests/integration/tasks/: README.md  __init__.py  test_git_identity.py  test_lifecycle.py
tests/integration/vault/: test_ssh_signer_stories.py  test_vault_env_integration.py
tests/lib/: test_agent_config.py  test_autopilot.py  test_cdi_hint.py  test_config.py  test_config_stack.py  test_docker.py  test_editor.py  test_effective_status.py  test_emoji.py  test_environment_gate_server.py  test_gate_server.py  test_gate_tokens.py  test_git_gate.py  test_headless_providers.py  test_images.py  test_instructions.py  test_podman_network.py  test_project_archive.py  test_projects.py  test_shell_launch.py  test_shield.py  test_ssh.py  test_task_names.py  test_tasks.py  test_wizard.py  test_work_status.py
tests/scripts/: __init__.py  test_blablador.py  test_init_branch_selection.py
tests/tui/: test_detail_screens.py  test_log_viewer.py  test_polling.py  test_project_state_staleness.py  test_tui_module.py  test_version_branch_detection.py  tui_test_helpers.py
tests/unit/: conftest.py  test_ci_map.py  test_error_surfacing.py  test_no_dangerous_subprocess.py  test_test_map.py
tests/unit/clearance/: test_identity.py  test_install.py  test_notifier_app.py
tests/unit/cli/: test_cli_acp.py  test_cli_agents.py  test_cli_auth.py  test_cli_autopilot.py  test_cli_completions.py  test_cli_config.py  test_cli_credentials.py  test_cli_dbus.py  test_cli_gate_server.py  test_cli_image_usage.py  test_cli_main.py  test_cli_panic.py  test_cli_project.py  test_cli_setup_global.py  test_cli_shield.py  test_cli_sickbay.py  test_cli_storage.py  test_cli_task_verdict_gate.py  test_cli_uninstall.py  test_cli_vault_local.py  test_cli_wiring.py  test_cli_workflows.py  test_completers.py  test_desktop_entry.py  test_sickbay.py
tests/unit/gate/: test_server.py
tests/unit/lib/: test_acp_paths.py  test_agent_config.py  test_autopilot.py  test_config.py  test_config_stack.py  test_container_doctor.py  test_container_exec.py  test_container_lifecycle.py  test_credential_proxy_env.py  test_docker.py  test_effective_status.py  test_emoji.py  test_ensure_credential_proxy.py  test_environment_gate_server.py  test_gate_server.py  test_gate_tokens.py  test_git_authorship.py  test_git_gate.py  test_git_identity_env.py  test_headless_providers.py  test_hooks.py  test_image.py  test_image_cleanup.py  test_images.py  test_instructions.py  test_login.py  test_panic.py  test_paths.py  test_project_archive.py  test_project_delete.py  test_projects.py  test_shield.py  test_ssh.py  test_staleness_detection.py  test_storage.py  test_task_ids.py  test_task_names.py  test_task_runner_internals.py  test_tasks.py  test_vault_env.py  (+6 more)
tests/unit/resources/: test_desktop_install.py
tests/unit/scripts/: test_acp_wrappers.py  test_blablador.py  test_blablatoad.py  test_init_branch_selection.py  test_opencode_provider.py
tools/: terok-chain-open.sh  terok-release-chain.py  terok-release-chain.sh
(+174 files in other folders)
