[build-system]
requires = ["poetry-core>=1.9.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "terok"
version = "0.6.1"
description = "Manage containerized projects and per-run tasks with Podman"
readme = "README.md"
license = "Apache-2.0"
authors = ["terok maintainers"]
keywords = ["podman", "containers", "tasks", "developer-tools", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Environment :: Console",
  "Operating System :: POSIX :: Linux",
  "Topic :: System :: Systems Administration",
]

# Use the src/ layout
packages = [
  { include = "terok", from = "src" },
]

# Extra files to ship alongside the package (similar to the old MANIFEST.in
# and setuptools data-files). These will be present in the sdist and wheel,
# but note that Poetry does not support installing them under /usr/share;
# they will live under the installed distribution instead.
include = [
  { path = "completions/terokctl" },
  { path = "docs/*.md" },
  { path = "examples/**" },
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pydantic = ">=2.6"
PyYAML = ">=6.0"
textual = "8.0.2"
argcomplete = ">=3.1"
requests = ">=2.31"
rich = ">=13.0"
platformdirs = ">=4.5.1"
unique-namer = ">=1.3"
terok-shield = {url = "https://github.com/terok-ai/terok-shield/releases/download/v0.3.0/terok_shield-0.3.0-py3-none-any.whl"}

[tool.poetry.group.dev.dependencies]
pydevd-pycharm = "261.22158.41"
ruff = ">=0.8"
markdown-it-py = ">=4.0.0"
mdit-py-plugins = ">=0.5.0"
tach = "^0.34.0"
textual-dev = "^1.8.0"
docstr-coverage = "^2.3.2"
complexipy = ">=5.0"
vulture = ">=2.12"
reuse = "^6.2.0"
bandit = ">=1.7"

[tool.poetry.group.test.dependencies]
pytest = ">=7.0"
pytest-cov = ">=4.0"

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.5,<2"
mkdocs-material = ">=9.0"
mkdocstrings = {extras = ["python"], version = ">=0.24"}
mkdocs-gen-files = ">=0.5"
mkdocs-literate-nav = ">=0.6"
mkdocs-section-index = ">=0.3"

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
python_files = ["test_*.py"]
python_classes = ["Test*", "*Tests"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
  "needs_podman: requires podman on PATH",
  "needs_root: requires root for nftables",
  "needs_host_features: real host/filesystem/process integration, no network or podman required",
  "needs_internet: requires outbound network connectivity",
]

[tool.poetry.scripts]
terokctl = "terok.cli.main:main"
terok = "terok.tui.app:main"
terok-gate = "terok.gate.server:main"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "UP",     # pyupgrade
  "SIM",    # flake8-simplify
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B904",   # raise from in except (not needed for SystemExit in CLI apps)
  "SIM102", # nested if statements (explicit can be clearer)
  "SIM105", # contextlib.suppress vs try/except/pass (try/except is often clearer)
  "SIM108", # use ternary operator (not always clearer)
  "SIM117", # nested with statements (explicit nesting can be clearer)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]  # allow imports after sys.modules mocking

[tool.ruff.lint.isort]
known-first-party = ["terok"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^v(?P<base>\\d+\\.\\d+\\.\\d+)$"
style = "pep440"
